@@ -1,4 +1,6 @@
 <unreleased> Jim Winstead <jimw@mysql.com> (4.01)
+* Report correct type for decimal columns from MySQL 5.0 and later
+  [rt.cpan.org #18294], reported by Ray Zimmerman
 * Fix t/40bindparam.t to work when ANSI_QUOTES SQL_MODE is set.
   [rt.cpan.org #21521], reported by David Wheeler
 * Return a statement handle with an error when column_info is called on
